--- a/src/indexs.html
+++ b/src/indexs.html
@@ -10,7 +10,7 @@
 	<div class="fail">
 		<h1>Спасибо за подписку</h1>
 		<p>ваша инструция придёт на ваш email в течение одной сутки </p>
-		<img src="" alt=""> 
+		<img src="https://yandex.uz/images/search?pos=31&from=tabbar&img_url=https%3A%2F%2Fsun9-41.userapi.com%2Fc836226%2Fv836226609%2F27e4%2F-VFFzJGJtIY.jpg&text=тянки&rpt=simage" alt=""> 
 		<button><a href="indesx.html">хотите развлечся</a></button>
 	</div>
 </body>
